// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wallet should deploy 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQB05wZq06D1wUBD_efDTfreRWvSiHEikcypNJD0umrgBxW_",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4450n,
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "storage-charged",
        "amount": "0.000000006",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{0000007B0000000001800B71D212D273ADB230C8D64D1A7F2E8285E880D2E2487C3E80E336C42E84DE084A04A817C800}
 x{820B8A3C23C10460E87A67DAAD3F23488EEF92966184DF661EEB0650701E2616A0609354DF656993A5BE7C5D52CBA9F4EC9DBF4DE0A006EB7AC44F5FD3B3DF05}",
            "type": "cell",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQB05wZq06D1wUBD_efDTfreRWvSiHEikcypNJD0umrgBxW_",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 8466n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "type": "empty",
            },
            "bounce": true,
            "from": "kQB05wZq06D1wUBD_efDTfreRWvSiHEikcypNJD0umrgBxW_",
            "to": "@treasure(treasure)",
            "type": "internal",
            "value": "10",
          },
        ],
      },
    ],
  },
]
`;

exports[`wallet should deploy 2`] = `
[
  {
    "$seq": 2,
    "events": [
      {
        "$type": "storage-charged",
        "amount": "0.000000006",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "notify",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQB05wZq06D1wUBD_efDTfreRWvSiHEikcypNJD0umrgBxW_",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4232n,
      },
    ],
  },
]
`;

exports[`wallet should deploy 3`] = `
[
  {
    "$seq": 3,
    "events": [
      {
        "$type": "storage-charged",
        "amount": "0.000000006",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQB05wZq06D1wUBD_efDTfreRWvSiHEikcypNJD0umrgBxW_",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3250n,
      },
    ],
  },
]
`;
